// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel renders without crashing 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  font-size: 1.2rem;
  margin-bottom: 0.5rem;
  width: 100%;
}

<label
    class="emotion-0 emotion-1"
    for="input-id"
  >
    children
  </label>
</DocumentFragment>
`;

exports[`FormLabel should create a large label style with variant large 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  font-size: 2.5rem;
  margin-bottom: 0.5rem;
  width: 100%;
}

<label
    class="emotion-0 emotion-1"
    for="input-id"
  >
    children
  </label>
</DocumentFragment>
`;
